--- a/assets/style.css
+++ b/assets/style.css
@@ -27,3 +27,45 @@ a:visited {
   color: #000;
   text-decoration: none;
 }
+.wrapper {
+  max-width: 960px;
+  margin: 0 auto;
+}
+div .wrapper h1 {
+  text-align: center;
+  margin: 100px auto;
+  font-size: 2.5em;
+}
+header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 20px 0;
+}
+nav {
+  justify-self: end;
+}
+nav li {
+  display: inline-block;
+  margin-left: 20px;
+}
+nav button {
+  background: none;
+  color: #fff;
+  cursor: pointer;
+  border: 0;
+  font-size: 1em;
+}
+.articles {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 30px;
+}
+.article {
+  padding: 10px;
+  border: 1px solid #00dba0;
+  position: relative;
+  padding-bottom: 40px;
+}
+.article h2 {
+  font-size: 1.2rem;
+}
